// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` multiple expenses  1`] = `
<h2>
  viewing 
  3
   
  expenses
   totalling
   
  1,141.95
</h2>
`;

exports[`1 expense 1`] = `
<h2>
  viewing 
  1
   
  expense
   totalling
   
  1.95
</h2>
`;
